--- a/index.html
+++ b/index.html
@@ -1,36 +1,15 @@
 <!DOCTYPE html>
-<html leang="pt-Br">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale">
-       <link rel="stylesheet" href="css/estilo.css">
-        <title>Site Portifolio Antonio</title>
-    </head>
-    <body>
-<header>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="css/estilo.css" rel="stylesheet">
+    <title>Primeiras aulas css</title>
+</head>
+<body>
+    <p class="cor1"> Non contristabit iustum quidquid ei acciderit</p>
 
-
-</header>
-    <main class="apresentacao">
-        <section class="apresentacaoConteudo">
-        <h1 class="titulo"> Eleve seu negocio a outro nivel
-        <strong class="tituloDestaque"> com um excelente front-end!</strong>
-        </h1>
-        <p class="apresentacaoTexto"> Olá! Sou o Antonio, desenvolver front-end <strong> HTML CSS!</strong></p>
-        <div class="DivLinks">
-            <h2 class="subtitulo"> Acesse as minhas redes</h2>
-            <a class="DivLinks_link" href="https://instagram.com"> instagram</a>
-            <img src="css/img/INSTAGRAM_icon-icons.com_65535.png">
-            <a class="DivLinks_link"  href="https://github.com/antoniocaiorodrigues"> github</a>
-            <img src="css/img/github_logo_icon_147285.png">
-            <a class="DivLinks_link"  href="https://www.linkedin.com/in/antonio-caio-rodrigues-785037226/"> linkedin</a>
-            <img src="css/img/social_media_corporate_logo_linkedin_icon-icons.com_67726.png">
-        </div>
-        </section>
-        <img src="css/img/OIP.jpg" alt="">
-    </main>
-    <footer>
-        
-    </footer>
-    </body>
+    <p class="cor2">Homo sanctus in sapientia manet, sicut sol; stultus sicut luna mutatur </p>
+    <p class="cor3"> Voluntati eius quis resistet? – “Quem resistirá à vontade de Deus?”</p>
+</body>
 </html>
